fix: rewritten markup and styles of the first screen blockall active elements are made using semantic tags, the width and height of the block are stretched to the entire width and height of the screen

--- a/source/less/blocks/header-main.less
+++ b/source/less/blocks/header-main.less
@@ -1,165 +1,178 @@
-// @import "../variables.less";
+@import "../variables.less";
 
-// html > body > main > div
-// {
-// 	position: relative;
+html > body > main > section.first-screen
+{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 
-// 	display: flex;
-// 	justify-content: space-between;
-// 	align-items: center;
+	min-width: 100%;
+	min-height: 100vh;
+}
 
-// 	width: 100%;
-// 	height: 100%;
+html > body > main > section.first-screen > .info-wrapper
+{
+	display: flex;
+	flex-direction: column;
 
-// 	padding: 0 50px 180px 50px;
-// }
+	padding-left: 7vh;
+	margin-top: 15%;
+	margin-right: 50px;
+}
 
-// html > body > main > div > section
-// {
-// 	padding-top: 7%;
-// 	width: 508px;
-// }
+html > body > main > section.first-screen > .info-wrapper > h1
+{
+	margin: 0;
+	margin-bottom: 25px;
 
-// html > body > main > div > section h1
-// {
-// 	margin-bottom: 27px;
+	font-size: 64px;
+	line-height: 64px;
+	letter-spacing: -0.5px;
 
-// 	font-size: 64px;
-// 	font-weight: 500;
-// 	letter-spacing: -0.5px;
-// }
+	@media (max-width: 1065px)
+	{
+		font-size: 44px;
+	}
+}
 
-// html > body > main > div > section p
-// {
-// 	margin-bottom: 44px;
+html > body > main > section.first-screen > .info-wrapper > p
+{
+	margin-bottom: 44px;
 
-// 	font-size: 21px;
-// 	font-weight: 400;
-// 	letter-spacing: -0.01px;
-// }
+	font-size: 21px;
+	line-height: 30px;
+	letter-spacing: -0.01px;
+}
 
-// html > body > main > div > section > a.btn
-// {
-// 	padding-top: 17px;
-// 	padding-right: 28px;
-// 	padding-bottom: 15px;
-// 	padding-left: 31px;
-// 	margin-right: 31px;
-// 	margin-bottom: 50px;
+html > body > main > section.first-screen > .info-wrapper > .learn-start
+{
+	margin-bottom: 20vh;
 
-// 	font-size: 16px;
-// 	font-weight: 500;
-// 	letter-spacing: -0.01px;
+	@media (max-width: 1065px)
+	{
+		display: flex;
+		flex-direction: column;
+		align-items: start;
+		gap: 15px;
+	}
+}
 
-// 	color: @white;
-// 	background-color: @orange;
+html > body > main > section.first-screen > .info-wrapper > .learn-start > a
+{
+	padding-top: 17px;
+	padding-right: 28px;
+	padding-bottom: 15px;
+	padding-left: 31px;
+	margin-right: 31px;
 
-// 	border-radius: 25px;
-// 	box-shadow: 0px 7px 15px rgba(249, 87, 46, 0.6);
-// }
+	font-size: 16px;
+	font-weight: 500;
+	line-height: 18px;
+	letter-spacing: -0.01px;
 
-// html > body > main > div > section > a.btn:hover
-// {
-// 	background-color: @orange-hover;
-// }
+	color: @white;
+	background-color: @orange;
 
-// html > body > main > div > section > span
-// {
-// 	font-size: 16px;
-// 	font-weight: 400;
+	border-radius: 25px;
+	box-shadow: 0px 7px 15px rgba(249, 87, 46, 0.6);
+}
 
-// 	color: @gray;
-// }
+html > body > main > section.first-screen > .info-wrapper > .learn-start > a:hover
+{
+	background-color: @orange-hover;
+}
 
-// html > body > main > div > section > a.header-scroll
-// {
-// 	display: flex;
-// 	align-items: center;
-// 	gap: 12px;
+html > body > main > section.first-screen > .info-wrapper > .learn-start > span
+{
+	font-size: 16px;
+	line-height: 24px;
+	letter-spacing: -0.01px;
 
-// 	width: 255px;
+	color: @gray;
 
-// 	margin-top: 50%;
+	@media (max-width: 1065px)
+	{
+		margin-left: 60px;
+	}
+}
 
-// 	font-size: 16px;
-// 	font-weight: 500;
+html > body > main > section.first-screen > .info-wrapper > .header-scroll
+{
+	display: flex;
+	align-items: center;
+	gap: 12px;
 
-// 	color: @orange;
-// }
+	font-size: 16px;
+	line-height: 18px;
+	letter-spacing: -0.01px;
 
-// html > body > main > div > section > a.header-scroll img
-// {
-// 	transition: 1s;
-// }
+	color: @orange;
+}
 
-// html > body > main > div > section > a.header-scroll:hover img
-// {
-// 	transform: scale(0.9) scaleX(0.8);
-// }
+html > body > main > section.first-screen > .info-wrapper > .header-scroll img
+{
+	transition: 1s;
+}
 
-// html > body > main > div > section div.header-video
-// {
-// 	position: absolute;
-// 	top: -100px;
-// 	right: 0%;
+html > body > main > section.first-screen > .info-wrapper > .header-scroll:hover img
+{
+	transform: scale(0.9) scaleX(0.8);
+}
 
-// 	z-index: -1;
+html > body > main > section.first-screen > .video-wrapper
+{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 
-// 	width: 840px;
-// 	height: 820px;
-// 	max-width: 100%;
+	width: 100vh;
+	height: 100vh;
+	margin-top: 20px;
 
-// 	background-image: url("../img/video.jpg");
-// 	@media (min-resolution: 2dppx) {
-// 		background-image: url("../img/video@2x.jpg");
-// 	}
-// 	background-repeat: no-repeat;
-// 	background-position: center;
-// 	background-size: cover;
-// }
+	background-image: url("../img/video.jpg");
+	@media (min-resolution: 2dppx) {
+		background-image: url("../img/video@2x.jpg");
+	}
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+}
 
-// html > body > main > div > section div.header-play
-// {
-// 	width: 250px;
-// 	margin-top: -35%;
-// 	margin-left: 10px;
+html > body > main > section.first-screen > .video-wrapper > button
+{
+	width: 255px;
+	height: 255px;
 
-// 	cursor: pointer;
-// }
+	cursor: pointer;
 
-// html > body > main > div > section div.header-play > div.video
-// {
-// 	display: flex;
-// 	justify-content: center;
-// 	align-items: center;
+	background-image: url('../img/oval.svg');
+	background-repeat: no-repeat;
 
-// 	width: 255px;
-// 	height: 255px;
+	border: none;
+	background-color: inherit;
+}
 
-// 	background-image: url('../img/oval.svg');
-// 	background-repeat: no-repeat;
-// }
+html > body > main > section.first-screen > .video-wrapper > button > img
+{
+	margin-top: 15px;
+	margin-left: 25px;
 
-// html > body > main > div > section div.header-play > div.video > img
-// {
-// 	margin-left: 20px;
-// }
+	transition: 1s;
+}
 
-// html > body > main > div > section div.header-play p
-// {
-// 	font-size: 21px;
-// 	font-weight: 400;
-// 	text-align: center;
+html > body > main > section.first-screen > .video-wrapper > button:hover img
+{
+	transform: scale(1.10);
+}
 
-// 	color: @orange;
-// }
+html > body > main > section.first-screen > .video-wrapper > p
+{
+	margin-top: 10px;
+	margin-bottom: 15px;
 
-// html > body > main > div > section div.header-play img
-// {
-// 	transition: 1s;
-// }
+	font-size: 21px;
+	line-height: 30px;
 
-// html > body > main > div > section div.header-play:hover img
-// {
-// 	transform: scale(1.10);
-// }
+	color: @orange;
+}
